--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>The Masked Singer</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Your name">
+    <meta name="author" content="Banijay Live Artist Brand">
     <meta name="description" content="Brief description">
     <meta property="og:title" content="Your Page Title">
     <meta property="og:description" content="Brief description">
